kubernetes/ingress/weather-sentinel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-sentinel-ingress
  namespace: weather-sentinel
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, DELETE, PUT"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    #nginx.ingress.kubernetes.io/rewrite-target: /metriche/$2
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # SGA Routes
      - path: /login
        pathType: Exact
        backend:
          service:
            name: sga-service
            port:
              number: 80
              
      - path: /registrazione
        pathType: Exact
        backend:
          service:
            name: sga-service
            port:
              number: 80
              
      - path: /elimina_account
        pathType: Exact
        backend:
          service:
            name: sga-service
            port:
              number: 80          

      
              
      # SGM Routes
      - path: /aggiorna_regole
        pathType: Exact
        backend:
          service:
            name: sgm-service
            port:
              number: 80 

      - path: /elimina_vincoli_utente
        pathType: Exact
        backend:
          service:
            name: sgm-service
            port:
              number: 80 
      
      - path: /elimina_vincoli_per_id_utente
        pathType: Exact
        backend:
          service:
            name: sgm-service
            port:
              number: 80 
      
      - path: /mostra_regole
        pathType: Exact
        backend:
          service:
            name: sgm-service
            port:
              number: 80 

      #GLS Routes
      - path: /admin_login
        pathType: Exact
        backend:
          service:
            name: gls-service
            port:
              number: 80    
      
      - path: /aggiorna_metriche
        pathType: Exact
        backend:
          service:
            name: gls-service
            port:
              number: 80
      
      - path: /elimina_metriche
        pathType: Exact
        backend:
          service:
            name: gls-service
            port:
              number: 80
      
      - path: /stato_metriche
        pathType: Exact
        backend:
          service:
            name: gls-service
            port:
              number: 80
      
      - path: /violazioni_metriche
        pathType: Exact
        backend:
          service:
            name: gls-service
            port:
              number: 80

      - path: /previsione_violazioni
        pathType: Exact
        backend:
          service:
            name: gls-service
            port:
              number: 80

      # Prometheus
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
